# CodingReported

./: README.md
UserApp/: BUILD.gn  iot_cloud_oc_sample.c
UserApp/include/: BH1750.h  DHT11.h  HCSR04.h  MQ2.h  MyE53Interface.h  OLED.h  OLEDfont.h  TurnLight.h  UserI2C.h  motor_control.h  nfc_configNet.h  oc_mqtt.h  sgp30.h
UserApp/src/: BH1750.c  DHT11.c  HCSR04.c  MQ2.c  MyE53Interface.c  OLED.c  OLEDfont.c  TurnLight.c  UserI2C.c  motor_control.c  nfc_configNet.c  oc_mqtt.c  sgp30.c  wifi_connect.c
operate-wx/: app.js  app.json  project.config.json  project.private.config.json
operate-wx/pages/env_data/: env_data.js  env_data.wxml  env_data.wxss
operate-wx/pages/index/: index.js  index.wxml  index.wxss
operate-wx/pages/login/: login.js  login.wxml  login.wxss
